tests/ui/extern/extern-type-diag-not-similar.stderr
error[E0277]: `Foo` cannot be sent between threads safely
  --> $DIR/extern-type-diag-not-similar.rs:20:19
   |
LL |     assert_send::<Foo>()
   |                   ^^^ `Foo` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `Foo`
   = note: consider using `std::sync::Arc<Foo>`; for more information visit <https://doc.rust-lang.org/book/ch16-03-shared-state.html>
note: required by a bound in `assert_send`
  --> $DIR/extern-type-diag-not-similar.rs:17:19
   |
LL | fn assert_send<T: Send + ?Sized>() {}
   |                   ^^^^ required by this bound in `assert_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
